--- a/任督二脉.md
+++ b/任督二脉.md
@@ -6,3 +6,12 @@
 4. git add .
 5. git commit -m "first commit"
 6. git push -u origin main                                                       (若fatal,请再try)
+
+# 上传本地 
+1. git init 
+2. git remote add origin https://...
+3. git pull origin master 
+4. git add . 
+5. git commit -m "omg" 
+6. git push origin master 
+7. 
