--- a/任督二脉.md
+++ b/任督二脉.md
@@ -1,11 +1,11 @@
 # 任督二脉
 
 1. 本地创建文件夹                                                              （a）
-2. git clone htpps://...                                                            (b)  pull
-3. 添加要上传的文件  到   拉取来的文件夹                         （c.txt）
+2. git clone htpps://...                                                       (b)  pull
+3. 添加要上传的文件  到   拉取来的文件夹                                         （c.txt）
 4. git add .
 5. git commit -m "first commit"
-6. git push -u origin main                                                       (若fatal,请再try)
+6. git push -u origin main                                                      (若fatal,请再try)
 
 # 上传本地 
 1. git init 
@@ -14,4 +14,7 @@
 4. git add . 
 5. git commit -m "omg" 
 6. git push origin master 
-7. 
+
+# 拉取到本地 
+1. 创建文件夹 git init
+2. git clone htpps://...
