--- a/任督二脉.md
+++ b/任督二脉.md
@@ -1,11 +1,11 @@
 # 任督二脉
 
-1. 本地创建文件夹                                                              （a）
-2. git clone htpps://...   (ctrl+`呼出终端)                                                    (b)  pull
-3. 添加要上传的文件  到   拉取来的文件夹                                         （c.txt）
+1. 本地创建文件夹                                                                                              （a）
+2. git clone htpps://...                            (ctrl+`呼出终端  一招鲜)                                                    (b)  pull
+3. 添加要上传的文件  到   拉取来的文件夹                                                                        （c.txt）
 4. git add .
 5. git commit -m "first commit"
-6. git push origin master  (+ ✓ master 推送  vscode)                                                    (若fatal,请再try)
+6. git push origin master                           (+ ✓ master 推送  vscode)                                                 (若fatal,请再try)
 
 # 上传本地 (小可拖)
 1. git init 
